--- a/open-page.html
+++ b/open-page.html
@@ -6,11 +6,16 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-11/css/all.min.css">
-<link rel="stylesheet" href="style.css">
-<title>Spenditure/title>
+<link rel="stylesheet" href="assets/style.css">
+<title>Spenditure</title>
 </head>
 <body>
-
+  <div class="jumbotron">
+  <h1 class="display-4">Spenditure</h1>
+  <p class="lead">Easy financial planning for all your long and short term goals, with real time investment data specialized for you!</p>
+  <hr class="my-4">
+    <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up Now</a>
+</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
