--- a/open-page.html
+++ b/open-page.html
@@ -10,9 +10,9 @@
 <title>Spenditure</title>
 </head>
 <body>
-  <div class="jumbotron">
-  <h1 class="display-4">Spenditure</h1>
-  <p class="lead">Easy financial planning for all your long and short term goals, with real time investment data specialized for you!</p>
+  <div class="jumbotron bg-black">
+  <h1 class="display-4 text-white">Spenditure</h1>
+  <p class="lead text-white">Easy financial planning for all your long and short term goals, with real time investment data specialized for you!</p>
   <hr class="my-4">
     <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up Now</a>
 </div>
