--- a/open-page.html
+++ b/open-page.html
@@ -10,6 +10,21 @@
 <title>Spenditure</title>
 </head>
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand">Spenditure</a>
+        <form class="form-inline">
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                 Sign In
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#">User Name</a>
+                  <a class="dropdown-item" href="#">Password</a>
+                  <a class="dropdown-item" href="#">Sign in</a>
+                </div>
+              </div>
+        </form>
+      </nav>
   <div class="jumbotron">
   <h1 class="display-4 text-white">Spenditure</h1>
   <p class="lead">Easy financial planning for all your long and short term goals, with real time investment data specialized for you!</p>
@@ -25,9 +40,16 @@
     <hr class="my-4">
     </div>
     <div class="jumbotron">
-        <h1 class="display-4 text-white">Markets Matter</h1>
-        <p class="lead"></p>
+        <h1 class="display-4 text-white">News Worthy</h1>
+        <p class="lead">Our analyst work hard to find the most up to date information that matters to you. See trending financial news specialized to you. Markets change fast and we make sure that you have information to make informed financial decisions.</p>
         <hr class="my-4">
+    </div>
+    <div class="news-scroll">
+        <div class="jumbotron">
+            <h1 class="display-4 text-white">Markets Matter</h1>
+            <p class="lead">See real-time stock market trends, monitor potential financial investments, and build a mock portfolio.</p>
+            <hr class="my-4">
+            </div>
     </div>
   
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
