--- a/open-page.html
+++ b/open-page.html
@@ -12,12 +12,30 @@
 </head>
 
 <body>
-  <div id="user information">
+  <div id="user-information">
     <!-- this is module for the financial user information populating both pages-->
     <div id="user-pie-chart">
       <!-- This is where user information is turned into pie chart -->
     </div>
   </div>
+  <div id="stock-information">
+    <!-- module to push stock info -->
+    <div id="chart-stock">
+      <!-- chart to push stock info to -->
+    </div>
+    <div id="stock-search">
+      <!-- stock search bar -->
+
+    </div>
+    <div id="stock-stats">
+      <!-- stats from stock api -->
+    </div>
+  </div>
+  <div id="News-feed">
+    <!-- where side scrolling newsfeed will go -->
+  </div>
+
+</div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
