added pictures and containers

--- a/index.html
+++ b/index.html
@@ -35,8 +35,18 @@
      <hr class="my-4">
      <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up Now</a>
    </div>
-   <div id="picture-of-charts">
-
+   <div id="picture-of-charts container">
+        <div class="well text-center">
+                <div class="col-md-12"></div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <a href="#"><img class= "homepage-image" src="assets/images/chart-icon-png-71.png" alt="inn_logo"></a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="#"><img class= "homepage-image" src="assets/images/chart-icon-png-74.png" alt="ccs_logo"></a>
+                    </div>
+                </div>
+            </div>
    </div>
    <div class="jumbotron">
      <h1 class="display-4 text-white">User Insights</h1>
@@ -54,11 +64,23 @@
    </div>
    <div class="news-scroll">
      <div class="jumbotron">
+        <div class="well text-center">
+            <div class="col-md-12">Sister Properties:</div>
+            <div class="row">
+                <div class="col-md-6">
+                    <a href="#"><img class= "homepage-image" src="assets/images/chart-icon-png-69.png" alt="inn_logo"></a>
+                </div>
+                <div class="col-md-6">
+                    <a href="#"><img class= "homepage-image" src="assets/images/chart-icon-png-62.png" alt="ccs_logo"></a>
+                </div>
+            </div>
+        </div>
        <h1 class="display-4 text-white">Markets Matter</h1>
        <p class="lead">See real-time stock market trends, monitor potential financial investments, and build a mock
          portfolio.</p>
        <hr class="my-4">
      </div>
+     
    </div>
 
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
