--- a/open-page.html
+++ b/open-page.html
@@ -7,11 +7,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-11/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>Spenditure</title>
 </head>
 
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand">Spenditure</a>
+        <form class="form-inline">
+          
+        </form>
+      </nav>
   <div id="user-information">
     <!-- this is module for the financial user information populating both pages-->
     <div id="user-pie-chart">
