--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
    <div class="news-scroll">
      <div class="jumbotron">
         <div class="well text-center">
-            <div class="col-md-12">Sister Properties:</div>
+            <div class="col-md-12"></div>
             <div class="row">
                 <div class="col-md-6">
                     <a href="#"><img class= "homepage-image" src="assets/images/chart-icon-png-69.png" alt="inn_logo"></a>
