--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
      <a class="navbar-brand">Spenditure</a>
      <form class="form-inline">
        <div class="dropdown">
-         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-           aria-haspopup="true" aria-expanded="false">
-           Sign In
+         <!--  -->
+         <button class="btn btn-secondary text-center log-in" id="login">
+           Login with Google
          </button>
-         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-           <a class="dropdown-item" href="#">User Name</a>
-           <a class="dropdown-item" href="#">Password</a>
-           <a class="dropdown-item" href="#">Sign in</a>
-         </div>
+         <div id="user"></div>
+         <!--  -->
+       </div>
        </div>
      </form>
    </nav>
@@ -33,20 +31,20 @@
      <p class="lead">Easy financial planning for all your long and short term goals, with real time investment data
        specialized for you!</p>
      <hr class="my-4">
-     <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up Now</a>
+     <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up Now</a> -->
    </div>
    <div id="picture-of-charts container">
-        <div class="well text-center">
-                <div class="col-md-12"></div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <a href="#"><img class= "homepage-image" src="assets/images/chart-icon-png-71.png" alt="inn_logo"></a>
-                    </div>
-                    <div class="col-md-6">
-                        <a href="#"><img class= "homepage-image" src="assets/images/chart-icon-png-74.png" alt="ccs_logo"></a>
-                    </div>
-                </div>
-            </div>
+     <div class="well text-center">
+       <div class="col-md-12"></div>
+       <div class="row">
+         <div class="col-md-6">
+           <a href="#"><img class="homepage-image" src="assets/images/chart-icon-png-71.png" alt="inn_logo"></a>
+         </div>
+         <div class="col-md-6">
+           <a href="#"><img class="homepage-image" src="assets/images/chart-icon-png-74.png" alt="ccs_logo"></a>
+         </div>
+       </div>
+     </div>
    </div>
    <div class="jumbotron">
      <h1 class="display-4 text-white">User Insights</h1>
@@ -64,28 +62,35 @@
    </div>
    <div class="news-scroll">
      <div class="jumbotron">
-        <div class="well text-center">
-            <div class="col-md-12">Sister Properties:</div>
-            <div class="row">
-                <div class="col-md-6">
-                    <a href="#"><img class= "homepage-image" src="assets/images/chart-icon-png-69.png" alt="inn_logo"></a>
-                </div>
-                <div class="col-md-6">
-                    <a href="#"><img class= "homepage-image" src="assets/images/chart-icon-png-62.png" alt="ccs_logo"></a>
-                </div>
-            </div>
-        </div>
+       <div class="well text-center">
+         <div class="col-md-12">Sister Properties:</div>
+         <div class="row">
+           <div class="col-md-6">
+             <a href="#"><img class="homepage-image" src="assets/images/chart-icon-png-69.png" alt="inn_logo"></a>
+           </div>
+           <div class="col-md-6">
+             <a href="#"><img class="homepage-image" src="assets/images/chart-icon-png-62.png" alt="ccs_logo"></a>
+           </div>
+         </div>
+       </div>
        <h1 class="display-4 text-white">Markets Matter</h1>
        <p class="lead">See real-time stock market trends, monitor potential financial investments, and build a mock
          portfolio.</p>
        <hr class="my-4">
      </div>
-     
+
    </div>
+   <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+   <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-app.js"></script>
+
+   <!-- Add Firebase products that you want to use -->
+   <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-auth.js"></script>
+
 
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+   <script src="assets/js/googleAuth.js"></script>
  </body>
 
  </html>
