--- a/open-page.html
+++ b/open-page.html
@@ -15,7 +15,21 @@
   <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand">Spenditure</a>
     <form class="form-inline">
+      <div class="dropdown">
+        <nav class="navbar">
+          <!-- Google Auth Buttom -->
+          <!--  -->
+          <span class="navbar-text text-white mr-4 p-0" id="user">
+            <!-- User's google Display Name goes here when logged in -->
+          </span>
+          <!-- Google Login Button -->
+          <button class="btn btn-secondary text-center log-in" id="login">
 
+            Login</button>
+          <!--  -->
+        </nav>
+      </div>
+      </div>
     </form>
   </nav>
   <div id="user-information">
@@ -24,13 +38,13 @@
       <!-- This is where user information is turned into pie chart -->
     </div>
   </div>
-  <div class="border m-5 p-1border-white" id="stock-information">
+  <div class="border m-5 p-1 border-white" id="stock-information">
     <!-- module to push stock info -->
     <div id="chart-stock">
       <!-- chart to push stock info to -->
     </div>
-    <div class="bg-white p-3" id="stock-search">
-      <!-- stock search form -->
+    <!-- stock search form -->
+    <div class="bg-white p-3 m-1" id="stock-search">
       <form id="search-form">
         <!-- Symbol Input -->
         <div class="form-group row">
@@ -61,9 +75,31 @@
                   <input type="radio" name="intervalSelect" id="intervalSelect4" autocomplete="off" value="30min">
                   30
                 </label>
-                <label class="btn btn-secondary active" >
-                  <input type="radio" name="intervalSelect" id="intervalSelect5" autocomplete="off" value="60min" checked>
+                <label class="btn btn-secondary active">
+                  <input type="radio" name="intervalSelect" id="intervalSelect5" autocomplete="off" value="60min"
+                    checked>
                   60
+                </label>
+              </div>
+            </div>
+        </fieldset>
+        <!-- Select number of datapoints to show -->
+        <fieldset class="form-group">
+          <div class="row">
+            <legend class="col-form-label col-sm-2 pt-0">Data points</legend>
+            <div class="col-sm-10">
+              <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-secondary active">
+                  <input type="radio" name="dataPoints" id="dataPoints1" autocomplete="off" value="1" checked>
+                  1
+                </label>
+                <label class="btn btn-secondary">
+                  <input type="radio" name="dataPoints" id="dataPoints2" autocomplete="off" value="3">
+                  3
+                </label>
+                <label class="btn btn-secondary">
+                  <input type="radio" name="dataPoints" id="dataPoints3" autocomplete="off" value="5">
+                  5
                 </label>
               </div>
             </div>
@@ -86,9 +122,17 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.js"></script>
+  <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
-  <!-- Stock Lookup Script -->
+  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/6.3.5/firebase-app.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/6.3.5/firebase-auth.js"></script>
+
+
+
+  <script src="assets/js/googleAuth.js"></script>
   <script src="assets/js/api.js"></script>
 
 </body>
