added NYT articles that load when page loads

--- a/open-page.html
+++ b/open-page.html
@@ -133,7 +133,7 @@
             </div>
 
             <!-- This main card will hold each of the resulting articles -->
-            <div class="card-body" id="article-section">
+            <div class="card-body p-3" id="article-section">
             </div>
           </div>
         </div>
@@ -157,7 +157,7 @@
 
 
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.js"></script>
   <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
