--- a/open-page.html
+++ b/open-page.html
@@ -49,7 +49,7 @@
         <form id="search-form">
           <!-- Symbol Input -->
           <div class="form-group row">
-            <label for="inputSymbol" class="col-sm-2 col-form-label">Stock Symbol</label>
+            <label for="inputSymbol" class="col-sm-2 col-form-label">Symbol</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="inputSymbol" placeholder="MSFT">
             </div>
@@ -57,7 +57,8 @@
           <!-- Interval Select Radio Button Group -->
           <fieldset class="form-group">
             <div class="row">
-              <legend class="col-form-label col-sm-2 pt-0">Interval (mins)</legend>
+              <legend class="col-form-label col-sm-2 pt-0">Update Interval
+                <br>(minutes)</legend>
               <div class="col-sm-10">
                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
                   <label class="btn btn-secondary">
@@ -87,7 +88,7 @@
           <!-- Select number of datapoints to show -->
           <fieldset class="form-group">
             <div class="row">
-              <legend class="col-form-label col-sm-2 pt-0">Data points</legend>
+              <legend class="col-form-label col-sm-2 pt-0">Response Objects</legend>
               <div class="col-sm-10">
                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
                   <label class="btn btn-secondary active">
@@ -112,11 +113,13 @@
           </div>
         </form>
       </div>
+      <!-- Search Results -->
       <div class="background-white m-1" id="stock-stats">
         <!-- stats from stock api -->
 
       </div>
     </div>
+    <!-- NYT Articles -->
     <div id="News-feed">
       <!-- where side scrolling newsfeed will go -->
       <div class="row">
