minor formatting changes

--- a/open-page.html
+++ b/open-page.html
@@ -147,31 +147,17 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <!-- jquery & bootstrap scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.js"></script>
-  <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
-  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+  <!-- Firebase Scripts -->
   <script src="https://www.gstatic.com/firebasejs/6.3.5/firebase-app.js"></script>
 
   <script src="https://www.gstatic.com/firebasejs/6.3.5/firebase-auth.js"></script>
 
-
-
+  <!-- Local Scripts -->
   <script src="assets/js/googleAuth.js"></script>
   <script src="assets/js/api.js"></script>
 
