--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-11/css/all.min.css">
    <link rel="stylesheet" href="assets/css/style.css">
    <script type="text/javascript" src="routes.js"></script>
-   <title>Spenditure</title>
+   <title>index</title>
  </head>
 
  <body>
