--- a/open-page.html
+++ b/open-page.html
@@ -21,6 +21,7 @@
   <div id="user-information">
     <!-- this is module for the financial user information populating both pages-->
     <div id="user-pie-chart">
+        <div id="piechart" style="width: 900px; height: 500px;"></div>
       <!-- This is where user information is turned into pie chart -->
     </div>
   </div>
