--- a/public/assets/html/index.html
+++ b/public/assets/html/index.html
@@ -7,8 +7,8 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-11/css/all.min.css">
-   <link rel="stylesheet" href="assets/css/style.css">
-   <script type="text/javascript" src="routes.js"></script>
+   <link rel="stylesheet" type="text/css" href="../../assets/css/style.css" />
+   <script type="text/javascript" src="../../../routes/routes.js"></script>
    <title>Spenditure</title>
  </head>
 
