login and routing

--- a/public/assets/html/open-page.html
+++ b/public/assets/html/open-page.html
@@ -23,7 +23,7 @@
             <!-- User's google Display Name goes here when logged in -->
           </span>
           <!-- Google Login Button -->
-          <button class="btn btn-secondary text-center log-in" id="login">
+          <button class="btn btn-secondary text-center log-out" id="log-out">
 
             Login</button>
           <!--  -->
