--- a/public/assets/html/index.html
+++ b/public/assets/html/index.html
@@ -45,10 +45,10 @@
        <div class="col-md-12"></div>
        <div class="row">
          <div class="col-md-6">
-           <a href="#"><img class="homepage-image" src="assets/images/chart-icon-png-71.png" alt="inn_logo"></a>
+           <a href="#"><img class="homepage-image" src="../images/chart-icon-png-71.png" alt="inn_logo"></a>
          </div>
          <div class="col-md-6">
-           <a href="#"><img class="homepage-image" src="assets/images/chart-icon-png-74.png" alt="ccs_logo"></a>
+           <a href="#"><img class="homepage-image" src="../images/chart-icon-png-74.png" alt="ccs_logo"></a>
          </div>
        </div>
      </div>
@@ -73,10 +73,10 @@
             <div class="col-md-12"></div>
             <div class="row">
                 <div class="col-md-6">
-                    <a href="#"><img class= "homepage-image" src="assets/images/chart-icon-png-69.png" alt="inn_logo"></a>
+                    <a href="#"><img class= "homepage-image" src="../images/chart-icon-png-69.png" alt="inn_logo"></a>
                 </div>
                 <div class="col-md-6">
-                    <a href="#"><img class= "homepage-image" src="assets/images/chart-icon-png-62.png" alt="ccs_logo"></a>
+                    <a href="#"><img class= "homepage-image" src="../images/chart-icon-png-62.png" alt="ccs_logo"></a>
                 </div>
             </div>
         </div>
