--- a/public/assets/html/open-page.html
+++ b/public/assets/html/open-page.html
@@ -32,10 +32,11 @@
       </div>
     </form>
   </nav>
-  <div id="user-information">
+  <div id="user-information" class="border m-5 p-1 border-white">
     <!-- this is module for the financial user information populating both pages-->
-    <form class="form-inline">
-      <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Preference</label>
+    <div id="input-form" class="bg-white p-3 m-1">
+    <form class="form-inline col-sm-4">
+      <label class="my-1 mr-2" for="inlineFormCustomSelectPref"></label>
       <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
         <option selected>Choose...</option>
         <option id = "deposit" value="1">Deposit</option>
@@ -48,6 +49,7 @@
     
       <button type="submit" class="btn btn-primary my-1">Submit</button>
     </form>
+  </div>
     <div id="user-pie-chart">
       <!-- This is where user information is turned into pie chart -->
     </div>
