--- a/public/assets/html/open-page.html
+++ b/public/assets/html/open-page.html
@@ -36,6 +36,7 @@
     <!-- this is module for the financial user information populating both pages-->
     <div id="input-form" class="bg-white p-3 m-1">
     <form class="form-inline col-sm-4">
+      <h3>Financials</h3>
       <label class="my-1 mr-2" for="inlineFormCustomSelectPref"></label>
       <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
         <option selected>Choose...</option>
@@ -62,7 +63,7 @@
     <!-- stock search form -->
     <div class="bg-white p-3 m-1" id="stock-search">
       <form id="search-form">
-        <!-- Symbol Input -->
+                <!-- Symbol Input -->
         <div class="form-group row">
           <label for="inputSymbol" class="col-sm-2 col-form-label">Stock Symbol</label>
           <div class="col-sm-10">
