pie chart changes

--- a/public/assets/html/open-page.html
+++ b/public/assets/html/open-page.html
@@ -35,7 +35,7 @@
   <div id="user-information" class="border m-5 p-1 border-white">
     <!-- this is module for the financial user information populating both pages-->
     <div id="input-form" class="bg-white p-3 m-1">
-    <form class="form-inline col-sm-4">
+    <form class="form-inline col-sm-6">
       <h3>Financials</h3>
       <label class="my-1 mr-2" for="inlineFormCustomSelectPref"></label>
       <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
@@ -50,6 +50,7 @@
     
       <button type="submit" class="btn btn-primary my-1">Submit</button>
     </form>
+    <img class="pie-chart col-sm-6" src="../images/503020-PieChart.png"/>
   </div>
     <div id="user-pie-chart">
       <!-- This is where user information is turned into pie chart -->
