--- a/public/assets/html/index.html
+++ b/public/assets/html/index.html
@@ -14,8 +14,8 @@
 
  <body>
    <nav class="navbar navbar-light bg-light">
-     <a class="navbar-brand">Spenditure</a>
-     <form class="form-inline">
+     <img src="../images/logo.png"/>
+       <form class="form-inline">
        <div class="dropdown">
          <nav class="navbar">
            <!-- Google Auth Buttom -->
@@ -87,7 +87,7 @@
      </div>
 
    </div>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
    <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
