--- a/public/assets/html/open-page.html
+++ b/public/assets/html/open-page.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-11/css/all.min.css">
   <link rel="stylesheet" type="text/css" href="../../assets/css/style.css" />
-  <title>Spenditure</title>
+  
 </head>
 
 <body>
   <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand">Spenditure</a>
+      <img src="../images/logo.png"/>
     <form class="form-inline">
       <div class="dropdown">
         <nav class="navbar">
