--- a/public/assets/html/open-page.html
+++ b/public/assets/html/open-page.html
@@ -49,6 +49,7 @@
       <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="ex. 75.00">
     
       <button type="submit" class="btn btn-primary my-1">Submit</button>
+      <div id= "balance-total"></div>
     </form>
     <img class="pie-chart col-sm-6" src="../images/503020-PieChart.png"/>
   </div>
