--- a/public/assets/html/index.html
+++ b/public/assets/html/index.html
@@ -8,7 +8,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-11/css/all.min.css">
    <link rel="stylesheet" type="text/css" href="../../assets/css/style.css" />
-   <script type="text/javascript" src="../../../routes/routes.js"></script>
+   <!-- <script type="text/javascript" src="../../../routes/routes.js"></script> -->
    <title>Spenditure</title>
  </head>
 
@@ -24,7 +24,7 @@
              <!-- User's google Display Name goes here when logged in -->
            </span>
            <!-- Google Login Button -->
-           <button class="btn btn-secondary text-center log-in" id="login">
+           <button class="btn btn-secondary text-center log-in" id="login" type="button">
              
              Login</button>
            <!--  -->
