Revert "Redirect info"

--- a/public/assets/html/open-page.html
+++ b/public/assets/html/open-page.html
@@ -23,7 +23,7 @@
             <!-- User's google Display Name goes here when logged in -->
           </span>
           <!-- Google Login Button -->
-          <button class="btn btn-secondary text-center log-in" id="log-in">
+          <button class="btn btn-secondary text-center log-in" id="login">
 
             Login</button>
           <!--  -->
@@ -131,11 +131,9 @@
   </div>
   <div id="News-feed">
     <!-- where side scrolling newsfeed will go -->
+    
+  </div>
 
-    <div class="container">
-      <div class="card-deck bg-white" id="article-section"></div>
-      </div>
-    </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
@@ -149,7 +147,7 @@
 
 
 
-  <script src="../../assets/js/openPage.js"></script>
+  <script src="assets/js/googleAuth.js"></script>
   <script src="assets/js/api.js"></script>
 
 </body>
