--- a/public/assets/html/open-page.html
+++ b/public/assets/html/open-page.html
@@ -34,8 +34,20 @@
   </nav>
   <div id="user-information">
     <!-- this is module for the financial user information populating both pages-->
-   
-    </form>
+    <form class="form-inline">
+        <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Preference</label>
+        <select class="custom-select my-1 mr-sm-2" id="userSelection">
+          <option selected>Choose...</option>
+          <option id = "deposit" value="1">Deposit</option>
+          <option id = "withdrawl" value="2">Withdrawl</option>
+          <option id = "balance" value="3">Balance</option>
+        </select>
+      
+        <label class="sr-only" for="inlineFormInputName2">Name</label>
+        <input type="text" class="form-control mb-2 mr-sm-2" id="userInput" placeholder="ex. 75.00">
+      
+        <button type="submit" class="btn btn-primary my-1" id="userSubmit">Submit</button>
+      </form>
     <div id="user-pie-chart">
       <!-- This is where user information is turned into pie chart -->
     </div>
