fixed image paths

--- a/public/assets/html/open-page.html
+++ b/public/assets/html/open-page.html
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="navbar navbar-light bg-light">
-    <img src="../images/logo.png" />
+    <img src="../../assets/images/logo.png" />
     <form class="form-inline">
       <div class="dropdown">
         <nav class="navbar">
@@ -51,7 +51,7 @@
         <button type="submit" class="btn btn-primary my-1">Submit</button>
         <div id="balance-total"></div>
       </form>
-      <img class="pie-chart col-sm-6" src="../images/503020-PieChart.png" />
+      <img class="pie-chart col-sm-6" src="../../assets/images/503020-PieChart.png" />
     </div>
     <div id="user-pie-chart">
       <!-- This is where user information is turned into pie chart -->
