--- a/public/assets/html/index.html
+++ b/public/assets/html/index.html
@@ -13,7 +13,7 @@
 
  <body>
    <nav class="navbar navbar-light bg-light">
-     <img src="../images/logo.png" />
+     <img src="../../assets/images/logo.png" />
      <form class="form-inline">
        <div class="dropdown">
          <nav class="navbar">
@@ -44,10 +44,10 @@
        <div class="col-md-12"></div>
        <div class="row">
          <div class="col-md-6">
-           <a href="#"><img class="homepage-image" src="../images/chart-icon-png-71.png" alt="inn_logo"></a>
+           <a href="#"><img class="homepage-image" src="../../assets/images/chart-icon-png-71.png" alt="inn_logo"></a>
          </div>
          <div class="col-md-6">
-           <a href="#"><img class="homepage-image" src="../images/chart-icon-png-74.png" alt="ccs_logo"></a>
+           <a href="#"><img class="homepage-image" src="../../assets/images/chart-icon-png-74.png" alt="ccs_logo"></a>
          </div>
        </div>
      </div>
@@ -72,10 +72,10 @@
          <div class="col-md-12"></div>
          <div class="row">
            <div class="col-md-6">
-             <a href="#"><img class="homepage-image" src="../images/chart-icon-png-69.png" alt="inn_logo"></a>
+             <a href="#"><img class="homepage-image" src="../../assets/images/chart-icon-png-69.png" alt="inn_logo"></a>
            </div>
            <div class="col-md-6">
-             <a href="#"><img class="homepage-image" src="../images/chart-icon-png-62.png" alt="ccs_logo"></a>
+             <a href="#"><img class="homepage-image" src="../../assets/images/chart-icon-png-62.png" alt="ccs_logo"></a>
            </div>
          </div>
        </div>
