fixed script routes

--- a/public/assets/html/open-page.html
+++ b/public/assets/html/open-page.html
@@ -155,7 +155,7 @@
 
 
   <script src="../../assets/js/openPage.js"></script>
-  <script src="assets/js/api.js"></script>
+  <script src="../../assets/js/api.js"></script>
 
 </body>
 
