beautfied news card a bit

--- a/public/assets/html/open-page.html
+++ b/public/assets/html/open-page.html
@@ -138,7 +138,7 @@
     <!-- where side scrolling newsfeed will go -->
 
     <div class="container">
-      <div class="card-deck bg-white" id="article-section"></div>
+      <div class="card-deck bg-secondary border border-white p-1" id="article-section"></div>
     </div>
   </div>
   </div>
