--- a/public/assets/html/open-page.html
+++ b/public/assets/html/open-page.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-11/css/all.min.css">
   <link rel="stylesheet" type="text/css" href="../../assets/css/style.css" />
+  <script type="text/javascript" src="../js/buttonClicks.js"></script>
   <title>Spenditure</title>
 </head>
 
